작은공동체 관리체계 적용

--- a/public/studentAdd.html
+++ b/public/studentAdd.html
@@ -38,13 +38,11 @@
 				<td>
 					<select name="grade" id="grade">
 						<option value="선택하세요.">선택하세요.</option>
-						<option value="예비 중1">예비 중1</option>
-						<option value="중1">중1</option>
-						<option value="중2">중2</option>
-						<option value="중3">중3</option>
-						<option value="고1">고1</option>
-						<option value="고2">고2</option>
-						<option value="고3">고3</option>
+						<option value="그룹 1">그룹 1</option>
+						<option value="그룹 2">그룹 2</option>
+						<option value="그룹 3">그룹 3</option>
+						<option value="그룹 4">그룹 4</option>
+						<option value="그룹 5">그룹 5</option>
 						<option value="졸업">졸업</option>
 						<option value="교사">교사</option>
 					</select>
