--- a/public/studentList.html
+++ b/public/studentList.html
@@ -57,7 +57,7 @@
 					<td width="200" align="center">이름</td>
 					<td width="200" align="center">세례명</td>
 					<td width="200" align="center">나이</td>
-					<td width="200" align="center">학년</td>
+					<td width="200" align="center">그룹</td>
 					<td width="200" align="center">연락처</td>
 					<td width="200" align="center">비고</td>
 				</tr>`;
