--- a/public/studentAdd.html
+++ b/public/studentAdd.html
@@ -41,10 +41,7 @@
 						<option value="그룹 1">그룹 1</option>
 						<option value="그룹 2">그룹 2</option>
 						<option value="그룹 3">그룹 3</option>
-						<option value="그룹 4">그룹 4</option>
-						<option value="그룹 5">그룹 5</option>
-						<option value="졸업">졸업</option>
-						<option value="교사">교사</option>
+						<option value="고3">고3</option>
 					</select>
 				</td>
 			</tr>
