그룹 추가, 수정, 삭제 기능 추가

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 	<h1>장위동 중고등부 주일학교 관리 프로그램</h1>
 	<p>환영합니다. 선생님.</p>
 	<p><a href="attendance.html">출석부 이동</a></p>
+	<p><a href="groupList.html">그룹 리스트 이동</a></p>
 	<p><a href="studentList.html">학생 명단 이동</a></p>
 	<p><a href="statistics.html">통계 이동</a></p>
 </body>
