--- a/public/studentList.html
+++ b/public/studentList.html
@@ -67,7 +67,7 @@
 					<td width="200" align="center">${e.societyName}</td>
 					<td width="200" align="center">${e.catholicName}</td>
 					<td width="200" align="center">${e.age}</td>
-					<td width="200" align="center">${e.grade}</td>
+					<td width="200" align="center">${e.gName}</td>
 					<td width="200" align="center">${e.contact}</td>
 					<td width="200" align="center"><button type="button" onclick="modifyData('${e.code}')">수정</button></td>
 				</tr>`;
