--- a/public/studentModify.html
+++ b/public/studentModify.html
@@ -34,14 +34,9 @@
 				</td>
 			</tr>
 			<tr width="200" height="30">
-				<td>학년</td>
+				<td>그룹</td>
 				<td>
-					<select name="grade" id="grade">
-						<option value="선택하세요.">선택하세요.</option>
-						<option value="그룹 1">그룹 1</option>
-						<option value="그룹 2">그룹 2</option>
-						<option value="그룹 3">그룹 3</option>
-						<option value="고3">고3</option>
+					<select name="group" id="group">
 					</select>
 				</td>
 			</tr>
@@ -64,9 +59,34 @@
 </body>
 <script>
 	const receivedData = location.href.split('?')[1];
-	console.log(receivedData); // data
+
+	let group = $("#group");
+
+	const groupList = () => {
+		$.ajax({
+			url: "/group/list",
+			type: 'GET',
+			data: {},
+			success: (data) => {
+				console.log(data.list);
+				group.empty();
+				let html = '';
+				html += `<option value="선택하세요.">선택하세요.</option>`;
+				data.list.forEach(element => {
+					console.log(element);
+					html += `<option value="${element.code}">${element.name}</option>`;
+				});
+				group.append(html);
+			},
+			error: (error) => {
+				alert(error.responseText);
+			}
+		});
+	};
 
 	const initPage = () => {
+		groupList();
+		
 		$.ajax({
 			url: "/student/info",
 			type: 'GET',
@@ -77,7 +97,7 @@
 				$('#societyName').val(data.s_society_name);
 				$('#catholicName').val(data.s_catholic_name);
 				$('#age').val(data.s_age);
-				$('#grade').val(data.s_grade);
+				$('#group').val(data.group_g_code);
 				$('#contact').val(data.s_contact);
 			},
 			error: (error) => {
@@ -104,9 +124,9 @@
 			$("#age").focus();
 			return false;
 		}
-		if (formData.grade === '선택하세요.') {
-			alert("학년을 선택하세요.");
-			$("#grade").focus();
+		if (formData.group === '선택하세요.') {
+			alert("그룹을 선택하세요.");
+			$("#group").focus();
 			return false;
 		}
 		if (!contactRegExp.test(formData.contact)) {
@@ -126,14 +146,14 @@
 			const societyName = $("#societyName").val();
 			const catholicName = $("#catholicName").val();
 			const age = $("#age").val();
-			const grade = $("#grade").val();
+			const group = $("#group").val();
 			const contact = $('#contact').val();
 			const formData = {
 				code,
 				societyName,
 				catholicName,
 				age,
-				grade,
+				group,
 				contact,
 			};
 
