출석 여부 체크부분 변경

--- a/public/attendance.html
+++ b/public/attendance.html
@@ -27,7 +27,7 @@
 	</h1>
 	<p>
 		작성법<br>
-		출석=○&nbsp;&nbsp;미사만 참여=△&nbsp;&nbsp;결석=※
+		출석=◎&nbsp;&nbsp;미사만 참여=○&nbsp;&nbsp;결석=미 표기
 	</p>
 	<p>
 		<select id="group">
