add statistics prototype

--- a/public/statistics.html
+++ b/public/statistics.html
@@ -19,8 +19,10 @@
 <body id="body" align="center">
 	<h1>
 		<select id="year">
+			<option>2022</option>
 		</select>년
 		<select id="month">
+			<option>6</option>
 		</select>월 
 		통계
 	</h1>
