--- a/public/attendance.html
+++ b/public/attendance.html
@@ -152,36 +152,67 @@
 
 	const save = () => {
 		if (confirm('정말 이대로 입력 하시겠습니까?')) {
+			let success = true;
 			let year = $('#year').val();
 			let loopData = {};
-			let sendData = [];
-
-			students.forEach(e => {
-				let idx = 1;
-				yearDate.forEach(i => {
-					i.forEach(item => {
-						let str = `${e.sCode + '-' + idx + '.'+ item}`;
-						let data = document.getElementById(str).value; // $('#220221-874895-3.6').val()가 이곳에서 안먹어서 바닐라 JS를 사용.
-						loopData.str = str;
-						loopData.data = data;
-						sendData.push(loopData);
-						loopData = {};
-					});
-					idx++;
-				});
-			});
-			console.log(sendData);
-			$.ajax({
-				type: 'POST',
-				url: '/attendance/save',
-				data: { year, sendData },
-				success: (data) => {
-					alert(data);
-				},
-				error: (error) => {
-					alert(error.responseText);
+			let emptyData = [];
+			let fullData = [];
+			
+			const month = [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ,11, 12 ];
+			let day = [];
+			
+			month.forEach(e => {
+				const lastDay = new Date(year, e - 1, 0).getDate();
+				
+				for (let i = 1; i <= lastDay; i++) {
+					const date = new Date(year, e - 1, i);
+					if (date.getDay() === 0) {
+						day.push({ month: e, day: i });
+					}
 				}
 			});
+
+			students.forEach(e => {
+				day.forEach(item => {
+					let str = `${e.sCode + '-' + item.month + '.'+ item.day}`;
+					let data = document.getElementById(str).value; // $('#220221-874895-3.6').val()가 이곳에서 안먹어서 바닐라 JS를 사용.
+					loopData.str = str;
+					loopData.data = data;
+					if (data === ''){
+						emptyData.push(loopData);
+					} else {
+						fullData.push(loopData);
+					}
+					loopData = {};
+				});
+			});
+
+			$.ajax({
+				type: 'POST',
+				url: '/attendance/fullSave',
+				data: { year, fullData },
+				success: (data) => {
+					if (data !== "출석 입력 성공") success = false;
+				},
+				error: (error) => {
+					console.log(error);
+				}
+			});
+
+			$.ajax({
+				type: 'POST',
+				url: '/attendance/emptySave',
+				data: { year, emptyData },
+				success: (data) => {
+					if (data !== "출석 입력 성공") success = false;
+				},
+				error: (error) => {
+					console.log(error);
+				}
+			});
+
+			if (success === true) alert("출석 입력 성공");
+			else alert("입력 실패!");
 		}
 	};
 
