--- a/public/attendance.html
+++ b/public/attendance.html
@@ -1,45 +1,34 @@
 <html>
 <head>
 	<title>출석부</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-	<style>
-		#body{
-			position: absolute;
-			top: 1%;
-			left: 2%;
-		}
-		.headMonth{
-			width: 125;
-			text-align: center;
-		}
-		.headDate{
-			display: flex;
-			flex-direction: row;
-			justify-content: space-between;
-		}
-	</style>
+	<link href="./css/common.css" rel="stylesheet">
 </head>
-<body id="body" align="center">
-	<h1>
-		<select id="year">
-		</select>
-		중고등부 주일학교 출석부
-	</h1>
-	<p>
-		작성법<br>
-		출석=◎&nbsp;&nbsp;미사만 참여=○&nbsp;&nbsp;결석=미 표기
-	</p>
-	<p>
-		<select id="group">
-		</select>
-	</p>
-	<table id="table" border="1" align="center">
-	</table>
-	<p><button type="button" id="save">저장</button></p>
-	<p><a href="index.html">뒤로 가기</a></p>
+<body>
+	<div class="container">
+		<h1>
+			<select id="year"></select>
+			중고등부 주일학교 출석부
+		</h1>
+		<p>
+			작성법<br>
+			출석=◎ 미사만 참여=○ 결석=미 표기
+		</p>
+		<p>
+			<select class="form-select" id="group"></select>
+		</p>
+		<div class="table-responsive" style="width: 1500px;">
+			<table class="table table-sm table-bordered table-hover align-middle mw-auto"></table>
+		</div>
+		<p><button class="btn btn-success" type="button" id="save">저장</button></p>
+		<p><a class="btn btn-primary" href="index.html">뒤로 가기</a></p>
+	</div>
 </body>
 <script>
-	let table = $('#table');
+	let table = $('.table');
 	let yearDate; // 한해의 일요일에 해당하는 날에 대한 변수
 	let students; // 그룹에 소속된 학생에 대한 변수
 
@@ -84,40 +73,40 @@
 				students = data.groupStudents;
 				yearDate = data.day;
 				table.empty();
-				let html = `<tr>
-					<td class="headMonth" rowspan="2">이름</td>
-					<td class="headMonth" rowspan="2">세례명</td>
-					<td class="headMonth">1월</td>
-					<td class="headMonth">2월</td>
-					<td class="headMonth">3월</td>
-					<td class="headMonth">4월</td>
-					<td class="headMonth">5월</td>
-					<td class="headMonth">6월</td>
-					<td class="headMonth">7월</td>
-					<td class="headMonth">8월</td>
-					<td class="headMonth">9월</td>
-					<td class="headMonth">10월</td>
-					<td class="headMonth">11월</td>
-					<td class="headMonth">12월</td>
-					</tr>
-					<tr>`;
+				let html = `<thead class="table-primary">`;
+				html += `<tr scope="row">`;
+				html += `<th scope="col" rowspan="2" class="text-center align-middle">이름</th>`;
+				html += `<th scope="col" rowspan="2" class="text-center align-middle">세례명</th>`;
+				html += `<th scope="col" class="text-center">1월</th>`;
+				html += `<th scope="col" class="text-center">2월</th>`;
+				html += `<th scope="col" class="text-center">3월</th>`;
+				html += `<th scope="col" class="text-center">4월</th>`;
+				html += `<th scope="col" class="text-center">5월</th>`;
+				html += `<th scope="col" class="text-center">6월</th>`;
+				html += `<th scope="col" class="text-center">7월</th>`;
+				html += `<th scope="col" class="text-center">8월</th>`;
+				html += `<th scope="col" class="text-center">9월</th>`;
+				html += `<th scope="col" class="text-center">10월</th>`;
+				html += `<th scope="col" class="text-center">11월</th>`;
+				html += `<th scope="col" class="text-center">12월</th>`;
+				html += `</tr>`;
+				html += `<tr scope="row">`;
 				data.day.forEach(e => {
-					html += '<td>';
-					html += '<div class="headDate">';
+					html += '<th scope="col" class="text-center">';
 					e.forEach(item => {
-						html += `<div>${item}</div>`;
+						html += `${item} `;
 					})
-					html += '</div>';
-					html += '</td>';
+					html += '</th>';
 				});
 				html += '</tr>';
+				html += `</thead>`;
+				html += `<tbody>`;
 				data.groupStudents.forEach(e => {
-					html += '<tr>';
-					html += `<td align="center">${e.societyName}</td>`;
-					html += `<td align="center">${e.catholicName}</td>`;
+					html += '<tr scope="row">';
+					html += `<td scope="col" class="text-center table-info">${e.societyName}</td>`;
+					html += `<td scope="col" class="text-center table-info">${e.catholicName}</td>`;
 					for (let i = 0; i < 12; i++) {
-						html += '<td>';
-						html += '<div class="headDate">';
+						html += '<td scope="col" class="text-center">';
 						for (let j = 0; j < data.day[i].length; j++) {
 							let month;
 							let day;
@@ -131,17 +120,18 @@
 								Number(month);
 								Number(day);
 								if (e.sCode === list.studentCode && month - 1 == i && day == data.day[i][j]) {
-									html += `<div><input type="text" id="${e.sCode + '-' + (i + 1) + '.' + data.day[i][j]}" value="${inputContent}" style="width:20px;"></div>`;
+									html += `<input class="attendanceInput table-info" type="text" id="${e.sCode + '-' + (i + 1) + '.' + data.day[i][j]}" value="${inputContent}"" size=1> `;
 									inputCase = false;
 								}
 							});
-							if (inputCase) html += `<div><input type="text" id="${e.sCode + '-' + (i + 1) + '.'+ data.day[i][j]}" style="width:20px;"></div>`;
+							if (inputCase) html += `<input class="attendanceInput table-info" type="text" id="${e.sCode + '-' + (i + 1) + '.'+ data.day[i][j]}"" size=1> `;
 						}
-						html += '</div>';
 						html += '</td>';
 					}
 					html += '</tr>';
 				});
+				html += '</tbody>';
+				console.log(html);
 				table.append(html);
 			},
 			error: (error) => {
