--- a/public/groupModify.html
+++ b/public/groupModify.html
@@ -1,35 +1,40 @@
 <html>
 <head>
 	<title>출석부</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-	<style>
-		#body{
-			position: absolute;
-			top: 25%;
-			left: 40%;
-		}
-	</style>
+	<link href="./css/common.css" rel="stylesheet">
 </head>
-<body id="body" align="center">
-	<h1>그룹 데이터 수정 및 삭제</h1>
-	<form id="formData">
-		<table id="list" border="1" align="center">
-			<input type="hidden" name="code" id="code">
-			<tr width="200" height="30">
-				<td>이름</td>
-				<td>
-					<input type="text" name="name" id="name">
-				</td>
-			</tr>
-		</table>
-	</form>
-	<p>
-		<button type="button" id="modify">수정 완료</button>
-		<button type="button" id="remove">삭제</button>
-	</p>
-	<p>
-		<a href="groupList.html">뒤로 가기</a>
-	</p>
+<body>
+	<div class="container">
+		<h1>그룹 데이터 수정 및 삭제</h1><br>
+		<form id="formData">
+			<table id="list" class="table table-sm table-bordered table-hover align-middle mw-auto">
+				<input type="hidden" name="code" id="code">
+				<thead class="table-primary">
+					<tr scope="row">
+						<th scope="col" class="text-center">이름</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr scope="row">
+						<td scope="col" class="text-center">
+							<input class="form-control" type="text" name="name" id="name">
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</form>
+		<p>
+			<button class="btn btn-success" type="button" id="modify">수정 완료</button>
+			<button class="btn btn-danger" type="button" id="remove">삭제</button>
+		</p>
+		<p>
+			<a class="btn btn-primary" href="groupList.html">뒤로 가기</a>
+		</p>
+	</div>
 </body>
 <script>
 	const receivedData = location.href.split('?')[1];
