--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,21 @@
 <html>
 <head>
 	<title>출석부</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-	<style>
-		#body{
-			position: absolute;
-			top: 25%;
-			left: 35%;
-		}
-	</style>
+	<link href="./css/common.css" rel="stylesheet">
 </head>
-<body id="body" align="center">
-	<h1>장위동 중고등부 주일학교 관리 프로그램</h1>
-	<p>환영합니다. 선생님.</p>
-	<p><a href="attendance.html">출석부 이동</a></p>
-	<p><a href="groupList.html">그룹 리스트 이동</a></p>
-	<p><a href="studentList.html">학생 명단 이동</a></p>
-	<p><a href="statistics.html">통계 이동</a></p>
+<body>
+	<div class="container">
+		<h1>장위동 중고등부 주일학교 관리 프로그램</h1><br>
+		<h3>환영합니다. 선생님.</h3><br>
+		<p><a class="btn btn-primary" href="attendance.html">출석부 이동</a></p>
+		<p><a class="btn btn-primary" href="groupList.html">그룹 리스트 이동</a></p>
+		<p><a class="btn btn-primary" href="studentList.html">학생 명단 이동</a></p>
+		<p><a class="btn btn-primary" href="statistics.html">통계 이동</a></p>
+	</div>
 </body>
 <!-- <script>
 	const initPage = () => {
