--- a/public/studentAdd.html
+++ b/public/studentAdd.html
@@ -1,60 +1,55 @@
 <html>
 <head>
 	<title>출석부</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-	<style>
-		#body{
-			position: absolute;
-			top: 25%;
-			left: 42.5%;
-		}
-	</style>
+	<link href="./css/common.css" rel="stylesheet">
 </head>
-<body id="body" align="center">
-	<h1>학생 데이터 입력</h1>
-	<form id="formData" action="/student" method="post">
-		<table id="list" border="1" align="center">
-			<!-- <input type="hidden" name="code" id="code"> -->
-			<tr width="200" height="30">
-				<td>이름</td>
-				<td>
-					<input type="text" name="societyName" id="societyName">
-				</td>
-			</tr>
-			<tr width="200" height="30">
-				<td>세례명</td>
-				<td>
-					<input type="text" name="catholicName" id="catholicName">
-				</td>
-			</tr>
-			<tr width="200" height="30">
-				<td>나이</td>
-				<td>
-					<input type="text" name="age" id="age">
-				</td>
-			</tr>
-			<tr width="200" height="30">
-				<td>학년</td>
-				<td>
-					<select name="group" id="group">
-					</select>
-				</td>
-			</tr>
-			<tr width="200" height="30">
-				<td>연락처</td>
-				<td>
-					<input type="text" name="contact" id="contact">
-				</td>
-				<!-- <td><button type="button" id="clickInfo"></button></td> -->
-			</tr>
-		</table>
-	</form>
-	<p>
-		<button type="button" id="add">학생 추가</button>
-	</p>
-	<p>
-		<a href="studentList.html">뒤로 가기</a>
-	</p>
+<body>
+	<div class="container">
+		<h1>학생 데이터 입력</h1><br>
+		<form id="formData" action="/student" method="post">
+			<table id="list" class="table table-sm table-bordered table-hover align-middle mw-auto">
+				<!-- <input type="hidden" name="code" id="code"> -->
+				<thead class="table-primary">
+					<tr scope="row">
+						<th scope="col" class="text-center">이름</th>
+						<th scope="col" class="text-center">세례명</th>
+						<th scope="col" class="text-center">나이</th>
+						<th scope="col" class="text-center">학년</th>
+						<th scope="col" class="text-center">연락처</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr scope="row">
+						<td scope="col" class="text-center">
+							<input class="form-control" type="text" name="societyName" id="societyName">
+						</td>
+						<td scope="col" class="text-center">
+							<input class="form-control" type="text" name="catholicName" id="catholicName">
+						</td>
+						<td scope="col" class="text-center">
+							<input class="form-control" type="text" name="age" id="age">
+						</td>
+						<td scope="col" class="text-center">
+							<select class="form-select" name="group" id="group"></select>
+						</td>
+						<td scope="col" class="text-center">
+							<input class="form-control" type="text" name="contact" id="contact">
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</form>
+		<p>
+			<button class="btn btn-success" type="button" id="add">학생 추가</button>
+		</p>
+		<p>
+			<a class="btn btn-primary" href="studentList.html">뒤로 가기</a>
+		</p>
+	</div>
 </body>
 <script>
 	let group = $("#group");
