--- a/public/studentList.html
+++ b/public/studentList.html
@@ -1,35 +1,42 @@
 <html>
 <head>
 	<title>출석부</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-	<style>
-		#body{
-			position: absolute;
-			top: 17.5%;
-			left: 12.5%;
-		}
-	</style>
+	<link href="./css/common.css" rel="stylesheet">
 </head>
-<body id="body" align="center">
-	<h1>장위동 중고등부 주일학교 학생 명단</h1>
-	<input type="hidden" id="nowPage">
-	<p>
-		<select id="searchOption">
-			<option value="societyName">이름</option>
-			<option value="catholicName">세례명</option>
-		</select>
-		<input type="text" id="searchWord">
-		<button type="button" id="searchBtn">검색</button>
-	</p>
-	<table id="table" border="1" align="center">
-	</table>
-	<p id="pageNation">
-	</p>
-	<p><a href="studentAdd.html">학생 추가</a></p>
-	<p><a href="index.html">뒤로 가기</a></p>
+<body>
+	<div class="container">
+		<h1>장위동 중고등부 주일학교 학생 명단</h1><br>
+		<input type="hidden" id="nowPage">
+		<div class="row">
+			<div class="col-1"></div>
+			<div class="col-2">
+				<select class="form-select" id="searchOption">
+					<option value="societyName">이름</option>
+					<option value="catholicName">세례명</option>
+				</select>
+			</div>
+			<div class="col-6">
+				<input class="form-control" type="text" id="searchWord">
+			</div>
+			<div class="col-1">
+				<button class="btn btn-primary" type="button" id="searchBtn">검색</button>
+			</div>
+			<div class="col-2"></div>
+		</div>
+		<br>
+		<table class="table table-sm table-bordered table-hover align-middle mw-auto"></table>
+		<p id="pageNation">
+		</p>
+		<p><a class="btn btn-success" href="studentAdd.html">학생 추가</a></p>
+		<p><a class="btn btn-primary" href="index.html">뒤로 가기</a></p>
+	</div>
 </body>
 <script>
-	let table = $('#table');
+	let table = $('.table');
 	let pageNation = $('#pageNation');
 
 	const initPage = () => {
@@ -52,36 +59,40 @@
 				$('#nowPage').val(data.nowPage);
 				table.empty();
 				pageNation.empty();
-				let html = `<tr>
-					<td width="200" align="center">학번</td>
-					<td width="200" align="center">이름</td>
-					<td width="200" align="center">세례명</td>
-					<td width="200" align="center">나이</td>
-					<td width="200" align="center">그룹</td>
-					<td width="200" align="center">연락처</td>
-					<td width="200" align="center">비고</td>
-				</tr>`;
+				let html = `<thead class="table-primary">`;
+				html += `<tr scope="row">`;
+				html += `<td scope="col" class="text-center">학번</td>`;
+				html += `<td scope="col" class="text-center">이름</td>`;
+				html += `<td scope="col" class="text-center">세례명</td>`;
+				html += `<td scope="col" class="text-center">나이</td>`;
+				html += `<td scope="col" class="text-center">그룹</td>`;
+				html += `<td scope="col" class="text-center">연락처</td>`;
+				html += `<td scope="col" class="text-center">비고</td>`;
+				html += `</tr>`;
+				html += `</thead>`;
+				html += `<tbody>`;
 				data.list.forEach(e => {
-					html += `<tr>
-					<td width="200" align="center">${e.code}</td>
-					<td width="200" align="center">${e.societyName}</td>
-					<td width="200" align="center">${e.catholicName}</td>
-					<td width="200" align="center">${e.age}</td>
-					<td width="200" align="center">${e.gName}</td>
-					<td width="200" align="center">${e.contact}</td>
-					<td width="200" align="center"><button type="button" onclick="modifyData('${e.code}')">수정</button></td>
-				</tr>`;
+					html += `<tr scope="row">`;
+					html += `<td scope="col" class="text-center">${e.code}</td>`;
+					html += `<td scope="col" class="text-center">${e.societyName}</td>`;
+					html += `<td scope="col" class="text-center">${e.catholicName}</td>`;
+					html += `<td scope="col" class="text-center">${e.age}</td>`;
+					html += `<td scope="col" class="text-center">${e.gName}</td>`;
+					html += `<td scope="col" class="text-center">${e.contact}</td>`;
+					html += `<td scope="col" class="text-center"><button class="btn btn-primary" type="button" onclick="modifyData('${e.code}')">수정</button></td>`;
+					html += `</tr>`;
 				});
+				html += '</tbody>';
 				let pageHTML = '';
-				pageHTML += `<button type="button" onclick="movePage(${data.nowPage - 1}, ${data.totalPage})">&lt;&lt;</button>`;
+				pageHTML += `<button class="btn btn-primary" type="button" onclick="movePage(${data.nowPage - 1}, ${data.totalPage})">&lt;&lt;</button>`;
 				for (let i = 1; i <= data.totalPage; i++) {
 					if (data.nowPage === i) {
-						pageHTML += `<button type="button" onclick="movePage(${i}, ${data.totalPage})" style="color: white; background-color: black;">${i}</button>`;
+						pageHTML += `<button class="btn btn-warning" type="button" onclick="movePage(${i}, ${data.totalPage})">${i}</button>`;
 					} else {
-						pageHTML += `<button type="button" onclick="movePage(${i}, ${data.totalPage})">${i}</button>`;
+						pageHTML += `<button class="btn btn-light" type="button" onclick="movePage(${i}, ${data.totalPage})">${i}</button>`;
 					}
 				}
-				pageHTML += `<button type="button" onclick="movePage(${data.nowPage + 1}, ${data.totalPage})">&gt;&gt;</button>`;
+				pageHTML += `<button class="btn btn-primary" type="button" onclick="movePage(${data.nowPage + 1}, ${data.totalPage})">&gt;&gt;</button>`;
 				table.append(html);
 				pageNation.append(pageHTML);
 			},
