--- a/public/attendance.html
+++ b/public/attendance.html
@@ -150,7 +150,7 @@
 			let day = [];
 			
 			month.forEach(e => {
-				const lastDay = new Date(year, e - 1, 0).getDate();
+				const lastDay = new Date(year, e, 0).getDate();
 				
 				for (let i = 1; i <= lastDay; i++) {
 					const date = new Date(year, e - 1, i);
@@ -163,6 +163,7 @@
 			students.forEach(e => {
 				day.forEach(item => {
 					let str = `${e.sCode + '-' + item.month + '.'+ item.day}`;
+					console.log(str);
 					let data = document.getElementById(str).value; // $('#220221-874895-3.6').val()가 이곳에서 안먹어서 바닐라 JS를 사용.
 					loopData.str = str;
 					loopData.data = data;
